Adding first version of the star_wars_quotes gem

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,31 +1,16 @@
-# star-wars-quotes
-A very simple gem wrapping up the process of selecting a random star wars quote.
+== Description
 
+A very simple gem wrapping up the process of selecting a random star wars quote.
 
 Additional support for selecting a specific character quote or faceted quote is also included.
 Initial facets are used to find a quote to show as part of a test related system's output w.r.t. build_passed and build_failed scenarios.
 In essence this allows some whimsy to be added to the test report as a way to motivate the developer to fix the issue.
 
-
 But...these can be replaced with whatever you want.
 
 
-## Copyright notes
-All quotes from the films are owned by their respective rights holders.
-The use of these quotes in this gem falls under a "fair use" since they are now part of the fabric of pop culture.
+=== The gem can be used as follows
 
-
-## Installation
-```
-gem install star_wars_quotes
-```
-or add to your Gemfile
-```
-gem 'star_wars_quotes'
-```
-
-## Usage examples
-```
 # create an instance with the star wars quotes
 swq = StarWarsQuotes::Api.new
 
@@ -55,46 +40,20 @@ swq.add_quote( StarWarsQuotes::Quote.new( :"Darth Vader", 'No Disintegrations', 
 
 # create an instance with no star wars quotes
 swq = StarWarsQuotes::Api.new( false )
-```
 
-## You can add/remove facets to existing quotes since the quotes facets is an array
-```
-#find the quote you want to edit
+# You can add/remove facets to existing quotes since the quotes facets is an array
+# find the quote you want to edit and remove facets (or q.facets.clear)
 q.facets.delete(:build_failure)
 q.facets.delete(:build_success)
-(or q.facets.clear)
+# add the facets you want
 q.facets << :something_else
 q.facets << :something_other
-```
 
-## Non star wars usage examples (for example Batman)
-```
+# you can use the last two to create your own list of quotes and facets for anything else
 swq = StarWarsQuotes::Api.new( false )
 swq.add_quote( StarWarsQuotes::Quote.new( :'Batman', "I'm Batman", [:catchprase, :goodie] ) )
 swq.add_quote( StarWarsQuotes::Quote.new( :'Riddler', 'Riddle me this', [:catchprase, :baddie] ) )
-...
 quote = swq.random
 character_quote = swq.random_by_character( :'Batman' )
 facet_quote = swq.random_by_facet( :catchprase )
 etc...
-```
-
-## Building / testing / installing this gem from source
-```
-rake  (runs tests)
-rdoc  (builds docs)
-gem build star_wars_quotes.gemspec          (update version before build)
-gem install ./star_wars_quotes-1.0.0.gem    (update version)
-irb
-> require "star_wars_quotes"
-> swq = StarWarsQuotes::Api.new( true )
-> puts swq.random
-gem uninstall star_wars_quotes
-```
-
-## Pushing gem
-```
-gem signin
-gem push star_wars_quotes-1.0.0.gem         (update version)
-gem list -r star_wars_quotes
-```
